      the Map Editor Settings menu. [Ralph]

  * New Plotscripting Features
    * "save screenshot" [Ralph]
    * "append number": added "min length" and "pad with zeroes" args [Ralph]
    * "use door": added "fade screen" argument, so you can use a door without
      fading [Ralph]
    * "npc copy number" (opposite to "npc reference") [Ralph]
    * "create line", "slice is line", "get line color", "set line color" [Ralph]
    * "force mount vehicle", "current vehicle id", "current vehicle npc" [James]
    * Missing constants for "get/set menu item subtype":
      menulabel:selectable, menulabel:disabled, menulabel:unselectable,
      menuspecial:map always, menuspecial:save always, menuspecial:margins,
      menuspecial:purchases, menuspecial:windowed, menuspecial:fullscreen,
      menuspecial:music volume, menuspecial:sound volume,
      and menutype:caption alias for menutype:label,
      and alias "menuitembit:close menu when activated",
      and missing constant "menubit:remember selection" [Ralph]
    * "get/set menu cancel button menu" and "get/set menu item spacing" [Ralph]
    * "menu item disabled", "menu item visible", "menu item selectable" [Ralph]
    * "get/set menu disabled textcolor", "get/set menu item color",
      "get/set menu item disabled color" [Ralph]
    * "pathfind hero to", "hero chases npc" and "cancel hero walk" [James]
    * "read preference bitset", "write preference bitset" [Ralph]

  * Changes
    * "Previous attack" base ATK stat renamed to "Last damage by attacker"
    * "Caption" menu item type renamed to "Label", the "Unselectable" subtype
      of Labels renamed to "Disabled", and the "Close menu if selected" bit
      renamed to "Close menu when activated"
    * In-battle instant-run debug key moved from Ctrl-F4 to Ctrl-F5

  * Bugfixes
    * Fix a major memory leak while recording .gifs [Ralph]
    * Couldn't copy-paste text containing characters above ASCII 127 [Ralph]